<resources>
    <string name="app_name">Smart Weather</string>

    <!-- Labels -->
    <string name="city_label">Search a city</string>
    <string name="error_label">Something went wrong</string>
    <string name="no_data_label">Oops, no data found!</string>
    <string name="today_label">Today</string>

    <!-- Shared Prefereces -->
    <string name="preference_file_key">it.luccap11.android.ozono.PREFERENCE_FILE_KEY</string>
    <string name="preference_last_searched_city_latit">it.luccap11.android.ozono.PREFERENCE_LAST_SEARCHED_CITY_LATIT</string>
    <string name="preference_last_searched_city_longit">it.luccap11.android.ozono.PREFERENCE_LAST_SEARCHED_CITY_LONGIT</string>

    <!-- Images Content Deciption -->
    <string name="empty_content_descr">icon</string>
    <string name="zone_number">zone number</string>
    <string name="zone">zone</string>
    <string name="enabled">Enabled</string>
    <string name="grasstype">grassType</string>
    <string name="enter_soil_type">Enter Soil Type</string>
    <string name="enter_shade_type">Enter shade type</string>
    <string name="shadetype">shadeType</string>
    <string name="select_time">Select Time</string>
    <string name="time_will_be_displayed_here">Time will be displayed here</string>
    <string name="back">Back</string>
    <string name="time">Time</string>
    <string name="mode_simple" />
    <string name="mode_simple1">Mode: Simple</string>
    <string-array name="SoilTypes">
        <item>Sand</item>
        <item>Loamy Sand</item>
        <item>Sandy Loam</item>
        <item>Loam</item>
        <item>Clay Loam</item>
        <item>Silty Clay</item>
        <item>Clay</item>
    </string-array>

    <string-array name="ShadeTypes">
        <item>Lots of Sun</item>
        <item>Some Shade</item>
        <item>Lots of Shade</item>
        <item>Mostly Shade</item>
    </string-array>


</resources>