<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">


    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="68dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".DetailActivity">

        <TextView
            android:id="@+id/enabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:lines="1"
            android:text="@string/enabled"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/zone"
            android:layout_width="184dp"
            android:layout_height="133dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/zone"
            android:src="@drawable/grass" />

        <TextView
            android:id="@+id/zonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:lines="1"
            android:text="@string/zone_number"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter Soil Type"
            android:gravity="center"
            />
        <Spinner
            android:id="@+id/spSoil"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:contentDescription="@string/enter_soil_type"
            />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter Shdae Type"
            android:gravity="center"
            />

        <Spinner
            android:id="@+id/spShade"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:contentDescription="@string/enter_shade_type"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter Zone Picture"
            android:gravity="center"
            />
        <Spinner
            android:id="@+id/spPic"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:contentDescription="@string/enter_Pic"
            />

        <TextView
            android:id="@+id/grassType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/grasstype"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/shadetype"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Simple mode deploy time: "
            android:gravity="center"
            />
        <TextView
            android:id="@+id/simpleTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btnEnable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="disable" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>