<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:elevation="7dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/zone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/grass"
                android:adjustViewBounds="true"
                android:contentDescription="@string/zone"/>
            <TextView
                android:id="@+id/zonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/zone_number"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:lines="2"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/enabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enabled"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:lines="1"
                android:textStyle="bold"/>




        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>